--- a/Homework7/homework7.ipynb
+++ b/Homework7/homework7.ipynb
@@ -190,11 +190,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Textbook 7.10"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "adultDataFrame = pd.read_csv(\"adult/adult.data\")\n",
+    "adultDataFrame.columns = [\"age\", \"workclass\", \"fnlwgt\", \"education\", \"education-num\", \\\n",
+    "                         \"marital-status\", \"occupation\", \"relationship\", \"race\", \"sex\", \\\n",
+    "                         \"capital-gain\", \"capital-loss\", \"hours-per-week\", \"native-country\", \"50K\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import chi2_contingency"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of p is 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sex50K = adultDataFrame[[\"sex\", \"50K\"]]\n",
+    "sex50Kdata = pd.crosstab(sex50K[\"sex\"], sex50K[\"50K\"])\n",
+    "chist, p, dof, expected = chi2_contingency(sex50Kdata)\n",
+    "print(f\"The value of p is {p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of p is 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "edu50K = adultDataFrame[[\"education\", \"50K\"]]\n",
+    "edu50Kdata = pd.crosstab(edu50K[\"education\"], edu50K[\"50K\"])\n",
+    "chist, p, dof, expected = chi2_contingency(edu50Kdata)\n",
+    "print(f\"The value of p is {p}\")"
+   ]
   }
  ],
  "metadata": {
